--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,45 @@
 
 body{
     font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 main{
-    background-color: darkblue;
+    background-color:#141922;
     width: 100%;
     height: calc(100vh - 100px);
-    padding-top: 120px;
+    padding-top: 100px;
     overflow: auto;
 }
 
 header{
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
-    height: 100px;
+    height: 80px;
     position: fixed;
     z-index: 1;
 }
+
+
+.upgrade-button{
+    float:right;
+    margin: 20px 5px 30px 0;
+    line-height:35px;    
+    border: 1px solid #fff;
+    border-radius: 90px;
+    width: 190px;
+}
+
+.upgrade-button p{
+    color:#fff;
+    padding: 0px 35px;
+    vertical-align: middle;    
+    text-transform: uppercase;
+    font-size: 0.5em;
+    font-weight: 600;
+}
+
+
 
 .sidebar{    
     width: 10%;
@@ -31,9 +53,27 @@ header{
     background-color:#000;
     position: fixed;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-between;
 }
 
+
+[class*="buttons"]{
+    padding: 7px 0;
+}
+
+
+
+.sidebar img{
+    width: 22px;
+    height: 25px;
+}
+
+
+
 footer{
-    background-color: darkslategray;
+    background-color: #282828;
     height:100px;
 }
