--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,15 @@
     padding:0;
 }
 
-
 body{
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
+}
+
+
+/* UTILITIES */
+.text-center{
+    text-align: center;
 }
 
 main{
@@ -15,6 +20,7 @@ main{
     width: 100%;
     height: calc(100vh - 100px);
     padding-top: 100px;
+    padding-left:70px;
     overflow: auto;
 }
 
@@ -23,7 +29,6 @@ header{
     width: 100%;
     height: 80px;
     position: fixed;
-    z-index: 1;
 }
 
 
@@ -45,14 +50,11 @@ header{
     font-weight: 600;
 }
 
-
-
 .sidebar{    
     width: 10%;
     height: calc(100vh - 100px);
     background-color:#000;
     position: fixed;
-    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -64,14 +66,23 @@ header{
     padding: 7px 0;
 }
 
-
-
 .sidebar img{
     width: 22px;
     height: 25px;
 }
 
 
+/* MAIN */
+
+
+.row{
+    min-height: 0;
+    color: #707277;
+    text-transform: uppercase;
+    font-size: 0.5em;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
 
 footer{
     background-color: #282828;
