--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,27 @@ body{
     display: flex;    
 }
 
+.flex-column{
+    flex-direction: column;
+}
+
+
+.clearfix::after{
+    display: table;
+    content: "";
+    clear: both;
+}
+
+/* ------------------------------------ */
+
+
+
 main{
     background-color:#141922;
-    width: 100%;
+    flex-grow: 1;
     height: calc(100vh - 100px);
     padding-top: 100px;
-    padding-left:70px;
+    padding-left:15px;
     overflow: auto;
 }
 
@@ -35,6 +50,8 @@ header{
     width: 100%;
     height: 80px;
     position: fixed;
+    top:0;
+    right:0;
 }
 
 
@@ -56,16 +73,35 @@ header{
 }
 
 .sidebar{    
-    width: 10%;
+    width: 230px;
     height: calc(100vh - 100px);
-    background-color:#000;
-    position: fixed;
+    background-color:#000;    
     display: flex;
     flex-direction: column;
     align-items:center;
     justify-content: space-between;
+    z-index: 1;
 }
 
+.top-buttons{
+    padding-left: 15px;
+}
+
+
+.big-logo{
+    display:none;
+}
+
+
+.description{
+    display:none;
+}
+
+
+.playlist{
+    display:none;
+
+}
 
 [class*="buttons"]{
     padding: 7px 0;
@@ -88,6 +124,15 @@ header{
     padding-bottom: 30px;
 }
 
+
+
+.j-center .col-3:nth-child(5),
+.j-center .col-3:nth-child(6){
+    padding-top: 15px;
+}
+
+
+
 .row [class*="col"] a{
     text-decoration:none;
     color: #707277;
@@ -102,7 +147,7 @@ main p{
 
 
 .album-information .name-album{
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-transform: capitalize;
 }
 
@@ -134,9 +179,6 @@ main p{
     position: relative;
    
 }
-
-
-
 
 .del-rey{
     background-image: url(../img/youg.jpeg);
@@ -292,6 +334,81 @@ footer .col-6 .commands{
 }
 
 
-.subtitle{
+
+/* MEDIA QUERY */
+
+@media screen and (min-width: 576px){
+
+    .sidebar{    
+        width: 600px;
+        align-items:flex-start;
+        justify-content: space-between;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .big-logo{
+        display:block;
+    }
+    .big-logo img{
+        width:70px;
+        height: 40px;
+    }
+
+    .top-buttons div a span{
+        display: inline-block;
+        font-size: 0.5em;
+        font-weight: 600;
+        text-decoration: none;
+        color: #707277;
+        vertical-align: middle;
+        line-height: 100%;
+        padding-left: 5px;
+    }
+
+    [class*="buttons"] {
+        padding: 7px 15px;
+    }
+
+    .playlist{
+        display:block;
+        font-size: 0.8em;
+        font-weight: 600;
+        padding-left: 15px;
+
+    }
+
+    .playlist .creation-playlist{
+        color: #707277;
+        font-size: 0.7em;
+        padding: 7px 0;
+    }
+
+    .playlist .creation-playlist .fas{
+        font-size: 2.5em;
+        padding-right: 5px;
+    }
+
+
+    .playlist .name-playlist{
+        font-size: 0.6em;
+        padding: 5px 0;
+        color: #707277;        
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
