--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,12 @@ header{
 }
 
 
-
-
+.hidden-hr{
+    display:none;
+    background-color:#707277;
+    height: 1px;
+    width: 85%;
+}
 
 
 
@@ -199,13 +203,8 @@ main p{
 .author{
     color:#707277;
     font-size: 0.9em;
+    text-transform: capitalize;
 }
-
-
-/* main p:nth-child(2){
-    padding-top: 25px;
-} */
-
 
  main .row [class*="col-"] img{
     width: 95%;
@@ -213,20 +212,16 @@ main p{
     object-fit: contain;
 }
 
-
-
 .row .col-6{
     justify-content: space-around;
     align-items: center;
 }
-
 
 .circle{
     width: 100px;
     height: 100px;
     border-radius:50%;
     position: relative;
-   
 }
 
 .del-rey{
@@ -234,7 +229,6 @@ main p{
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    
 }
 
 .einaudi{
@@ -265,7 +259,6 @@ footer .row{
     height: 100%;
 }
 
-
 footer .row [class*="col-"]{
     height:100%;
 }
@@ -280,7 +273,6 @@ footer .col-3{
     height: 25%;
     object-fit: cover;
 }
-
 
 .information-song p{
     text-transform: capitalize;
@@ -313,17 +305,14 @@ footer .col-6 .commands{
     padding: 0 10px;
 }
 
-
 .commands .fa-play-circle{
     font-size: 3em;
 }
-
 
 .progressbar-song {
     height: 50%;
     align-items: center;
 }
-
 
 .bar-song{
     width:80%;
@@ -332,7 +321,6 @@ footer .col-6 .commands{
     background-color:#707277;
     line-height: 5px;
 }
-
 
 .progressbar-song .listening, 
 .progressbar-song .missing{
@@ -356,7 +344,6 @@ footer .col-6 .commands{
     color: #fff;
 }
 
-
 .bar{
     display: block;
     width: 50%;
@@ -364,8 +351,6 @@ footer .col-6 .commands{
     background-color:#707277;
     border-radius: 70px;
 }
-
-
 
 .bar .volume{
     display: block;
@@ -390,8 +375,6 @@ footer .col-6 .commands{
 .icons-song .fa-desktop{
     padding-right: 5px;
 }
-
-
 
 /* MEDIA QUERY */
 
@@ -438,7 +421,7 @@ footer .col-6 .commands{
 
     .low-buttons .download .description{
         color:#707277;
-        font-size: 0.4em;
+        font-size: 0.5em;
         padding-left: 5px;
     }
 
@@ -478,12 +461,26 @@ footer .col-6 .commands{
         padding: 5px 0;
         color: #707277;        
     }
+
+    .hidden-hr{
+        display:block;
+        width: 140%;
+    }
+
+
+
     /* ------------------------------------- */
 
 }
 
 
 @media screen and (min-width: 768px){
+
+
+    .hidden-hr{
+        display:block;
+        width: 200%;
+    }
 
     .row .col-md-3:nth-child(5), 
     .row .col-md-3:nth-child(6){
@@ -494,6 +491,13 @@ footer .col-6 .commands{
 
 
 @media screen and (min-width: 992px){
+
+    .hidden-hr{
+        display:block;
+        width: 250%;
+    }
+
+
     .col-lg-offset-3{
         display: block;
     }
