--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,8 @@ header{
 
 
 
-.j-center .col-3:nth-child(5),
-.j-center .col-3:nth-child(6){
+.j-center .col-3:nth-child(6),
+.j-center .col-3:nth-child(7){
     padding-top: 15px;
 }
 
@@ -482,15 +482,27 @@ footer .col-6 .commands{
         width: 200%;
     }
 
-    .row .col-md-3:nth-child(5), 
-    .row .col-md-3:nth-child(6){
+    .row .col-md:nth-child(6), 
+    .row .col-md:nth-child(7){
         padding-top: 25px;
     }
+
+    .sidebar{    
+        width: 550px;
+    }
+
+
+
+
 }
 
 
 
 @media screen and (min-width: 992px){
+
+    .sidebar{    
+        width: 450px;
+    }
 
     .hidden-hr{
         display:block;
@@ -502,13 +514,13 @@ footer .col-6 .commands{
         display: block;
     }
 
-    .j-center .col-3:nth-child(5),
-     .j-center .col-3:nth-child(6){
+    .j-center .col-3:nth-child(6),
+     .j-center .col-3:nth-child(7){
         padding-top: 0;
     }
     
-    .row .col-md-3:nth-child(5), 
-    .row .col-md-3:nth-child(6) {
+    .row .col-md-3:nth-child(6), 
+    .row .col-md-3:nth-child(7) {
         padding-top: 0;
     }
 
@@ -526,3 +538,13 @@ footer .col-6 .commands{
 
 }
 
+
+
+@media screen and (min-width:1200px){
+    
+}
+
+
+@media screen and (min-width:1400px){
+    
+}
