--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,13 @@ body{
 
 /* ------------------------------------ */
 
-
+.wrapper{
+    height: calc(100vh - 100px);
+}
 
 main{
     background-color:#141922;
     flex-grow: 1;
-    height: calc(100vh - 100px);
     padding-top: 100px;
     padding-left:15px;
     overflow: auto;
@@ -73,13 +74,13 @@ header{
 
 .sidebar{    
     width: 230px;
-    height: calc(100vh - 100px);
     background-color:#000;    
     display: flex;
     flex-direction: column;
     align-items:center;
     justify-content: space-between;
     z-index: 1;
+    overflow: auto;
 }
 
 .top-buttons{
@@ -186,6 +187,10 @@ main p{
    font-weight: 700;
    padding-bottom: 10px;
 }
+
+/* #recently-played .layover{
+    display: none;
+} */
 
 
 
@@ -339,6 +344,16 @@ footer .col-6 .commands{
     border-radius: 70px;
 }
 
+
+
+
+/* .bar-song .listened::after{
+    content: "";
+    width: 2px;
+    height: 100%;
+    border-radius:50%;
+} */
+
 .row .col-4{
     justify-content: space-around;
     align-items: center;
@@ -385,6 +400,7 @@ footer .col-6 .commands{
 
 .upgrade-button:hover{
     transform: scale(1.2);
+    cursor: pointer;
 }
 
 .row [class*="col"]:hover a{
@@ -401,8 +417,6 @@ footer .col-6 .commands{
     color:#fff;
 }
 
-
-
 .playlist p:hover{
     color:#fff;
     cursor: pointer;
@@ -413,6 +427,52 @@ footer .col-6 .commands{
     }
 
 
+
+
+
+.icons-song .far:hover{
+    color:#fff;
+    cursor: pointer;
+}
+
+.information-song *:hover{
+    text-decoration: underline;
+    color: #fff;
+    cursor: pointer;
+}
+
+.commands i:hover{
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+
+
+/* EFFETTI SULLE PROGRESSBAR */
+
+.bar-song .listened:hover{
+    background-color: greenyellow;
+    cursor: pointer;
+}
+
+
+.bar .volume:hover{
+    background-color: greenyellow;
+    cursor: pointer;
+}
+
+
+/* LAYOVER */
+
+.layover:hover{
+    display: block;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+
+
+/* ------------------------------------ */
 
 /* MEDIA QUERY */
 
@@ -506,7 +566,6 @@ footer .col-6 .commands{
     }
 
     /* ------------------------------------- */
-
 }
 
 
@@ -522,12 +581,15 @@ footer .col-6 .commands{
         padding-top: 25px;
     }
 
+    .row .col-md-3:nth-child(5), 
+    .row .col-md-3:nth-child(6){
+        padding-top: 30px;
+    }
+
     .sidebar{    
         width: 550px;
     }
 }
-
-
 
 @media screen and (min-width: 992px){
 
@@ -555,8 +617,8 @@ footer .col-6 .commands{
         padding-top: 0;
     }
     
-    .row .col-md-3:nth-child(6), 
-    .row .col-md-3:nth-child(7) {
+    .row .col-md-3:nth-child(5), 
+    .row .col-md-3:nth-child(6) {
         padding-top: 0;
     }
     
@@ -625,13 +687,5 @@ footer .col-6 .commands{
 
     .del-rey p, .einaudi p {        
         left: 45px;
-    }
-}
-
-@media screen and (max-height:540px){
-    footer{
-        position: fixed;
-        width: 100%;
-        z-index: 2;        
     }
 }
