--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ main p{
    padding-bottom: 10px;
 }
 
+.album-information{
+    padding-top: 10px;
+}
+
 .album-information .name-album{
     font-size: 1.2em;
     text-transform: capitalize;
@@ -203,7 +207,6 @@ main p{
 .img-container {
     position: relative;
     width: 100%;
-    height: 100%;
 }
 
 
@@ -214,7 +217,7 @@ main p{
     top: 0;
     left: 0;
     width: 95%;
-    height: 80%;    
+    height: 100%;    
     display: none;
 }
 
@@ -351,7 +354,21 @@ footer .col-6 .commands{
     width: 15%;
     background-color: lightgray;
     border-radius: 70px;
+    position: relative;
 }
+
+
+.marker{
+    display: none;
+    position: absolute;
+    top: -2px;
+    right: -4px;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
 
 .row .col-4{
     justify-content: space-around;
@@ -376,6 +393,7 @@ footer .col-6 .commands{
     height: 100%;
     background-color: lightgray;
     border-radius: 70px;
+    position: relative;
 }
 
 .col-3 .fas{
@@ -444,6 +462,7 @@ footer .col-6 .commands{
 .img-container:hover .overlay{
     display: block;
     background-color: rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 
 
@@ -454,10 +473,20 @@ footer .col-6 .commands{
     cursor: pointer;
 }
 
+.listened:hover .marker{
+    display: block;
+}
+
 .bar .volume:hover{
     background-color: greenyellow;
     cursor: pointer;
 }
+
+
+.volume:hover .marker{
+    display: block;
+}
+
 /* ------------------------------------ */
 
 
